--- a/style.css
+++ b/style.css
@@ -31,3 +31,8 @@ img {
   transform: translate(0);
   transition: transform 0.5s ease-in-out;
 }
+
+.buttons-container {
+  display: flex;
+  justify-content: space-between;
+}
